src/test/06-Errors/error-op-overload-pre.txt
error-op-overload-pre.ck:2:20: error: unary (prefix) operator '++' already overloaded on type 'int' (or its parent)...
[2] fun void @operator ++( int n )
                       ^
